change test vm names

--- a/examples/virtual-machines/linux/fedora/guest-vm-bridge-network-container-disk-image-example.yaml
+++ b/examples/virtual-machines/linux/fedora/guest-vm-bridge-network-container-disk-image-example.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     kubevirt.io/vm: vm-fedora
   name: vm-fedora
-  namespace: ibm-sterling
+  namespace: vm-test
 spec:
   dataVolumeTemplates:
     - metadata:
