--- a/automation/ansible/group_vars/.gitkeep.yaml
+++ b/automation/ansible/group_vars/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the group_vars directory is committed to Git
-# Remove this file when adding actual Ansible group variable configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-group-vars
-  annotations:
-    docs.ocp-virt.io/category: "automation"
-    docs.ocp-virt.io/complexity: "basic"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for Ansible group variables"
-    docs.ocp-virt.io/prerequisites: "ansible"
-    docs.ocp-virt.io/use-cases: "configuration-management,environment-variables"
-data:
-  readme: |
-    This directory will contain Ansible group variables including:
-    - all.yml - Variables for all hosts
-    - Environment-specific variable files
-    - OpenShift cluster configuration variables
-    - Platform-specific settings 
+This file is a placeholder to maintain directory structure.
