--- a/automation/ansible/inventory/staging/.gitkeep.yaml
+++ b/automation/ansible/inventory/staging/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the staging directory is committed to Git
-# Remove this file when adding actual Ansible inventory configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-staging-inventory
-  annotations:
-    docs.ocp-virt.io/category: "automation"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "staging"
-    docs.ocp-virt.io/description: "Placeholder for staging environment Ansible inventory"
-    docs.ocp-virt.io/prerequisites: "ansible,staging-cluster"
-    docs.ocp-virt.io/use-cases: "staging-automation,pre-production,validation"
-data:
-  readme: |
-    This directory will contain staging environment inventory including:
-    - hosts.yml - Staging cluster hosts
-    - group_vars/ - Staging-specific variables
-    - host_vars/ - Host-specific configurations
-    - Pre-production environment settings 
+This file is a placeholder to maintain directory structure.
