--- a/automation/gitops/argocd/app-of-apps/.gitkeep.yaml
+++ b/automation/gitops/argocd/app-of-apps/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the app-of-apps directory is committed to Git
-# Remove this file when adding actual ArgoCD app-of-apps configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-app-of-apps
-  annotations:
-    docs.ocp-virt.io/category: "gitops"
-    docs.ocp-virt.io/complexity: "advanced"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for ArgoCD app-of-apps configurations"
-    docs.ocp-virt.io/prerequisites: "argocd,openshift-gitops"
-    docs.ocp-virt.io/use-cases: "gitops,continuous-deployment,application-management"
-data:
-  readme: |
-    This directory will contain ArgoCD app-of-apps configurations including:
-    - Root application definitions
-    - Multi-environment application management
-    - Application dependency management
-    - GitOps workflow orchestration 
+This file is a placeholder to maintain directory structure.
