--- a/automation/gitops/argocd/applications/.gitkeep.yaml
+++ b/automation/gitops/argocd/applications/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the applications directory is committed to Git
-# Remove this file when adding actual ArgoCD application configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-applications
-  annotations:
-    docs.ocp-virt.io/category: "gitops"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for ArgoCD application configurations"
-    docs.ocp-virt.io/prerequisites: "argocd,openshift-gitops"
-    docs.ocp-virt.io/use-cases: "gitops,application-deployment,continuous-delivery"
-data:
-  readme: |
-    This directory will contain ArgoCD application configurations including:
-    - Application definitions for OCP Virtualization
-    - VM workload applications
-    - Infrastructure applications
-    - Environment-specific applications 
+This file is a placeholder to maintain directory structure.
