--- a/automation/gitops/flux/infrastructure/.gitkeep.yaml
+++ b/automation/gitops/flux/infrastructure/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the infrastructure directory is committed to Git
-# Remove this file when adding actual Flux infrastructure configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-flux-infrastructure
-  annotations:
-    docs.ocp-virt.io/category: "gitops"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for Flux infrastructure configurations"
-    docs.ocp-virt.io/prerequisites: "flux,openshift-cluster"
-    docs.ocp-virt.io/use-cases: "gitops,infrastructure-as-code,continuous-deployment"
-data:
-  readme: |
-    This directory will contain Flux infrastructure configurations including:
-    - Infrastructure component definitions
-    - Kustomization configurations
-    - Source controller configurations
-    - Helm controller configurations 
+This file is a placeholder to maintain directory structure.
