--- a/automation/helm/charts/.gitkeep.yaml
+++ b/automation/helm/charts/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the charts directory is committed to Git
-# Remove this file when adding actual Helm chart dependencies
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-helm-charts
-  annotations:
-    docs.ocp-virt.io/category: "helm"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for Helm chart dependencies"
-    docs.ocp-virt.io/prerequisites: "helm"
-    docs.ocp-virt.io/use-cases: "chart-dependencies,third-party-charts"
-data:
-  readme: |
-    This directory will contain Helm chart dependencies including:
-    - Third-party chart archives
-    - Local chart dependencies
-    - Chart repository configurations
-    - Dependency management files 
+This file is a placeholder to maintain directory structure.
