--- a/manifests/security/network-policies/.gitkeep.yaml
+++ b/manifests/security/network-policies/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the network-policies directory is committed to Git
-# Remove this file when adding actual NetworkPolicy configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-network-policies
-  annotations:
-    docs.ocp-virt.io/category: "security"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for NetworkPolicy configurations"
-    docs.ocp-virt.io/prerequisites: "network-policy-support"
-    docs.ocp-virt.io/use-cases: "microsegmentation,traffic-control,isolation"
-data:
-  readme: |
-    This directory will contain NetworkPolicy configurations including:
-    - VM-to-VM communication policies
-    - Ingress and egress rules
-    - Microsegmentation policies
-    - Default deny configurations 
+This file is a placeholder to maintain directory structure.
