--- a/manifests/security/rbac/.gitkeep.yaml
+++ b/manifests/security/rbac/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the rbac directory is committed to Git
-# Remove this file when adding actual RBAC configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-rbac
-  annotations:
-    docs.ocp-virt.io/category: "security"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for Role-Based Access Control configurations"
-    docs.ocp-virt.io/prerequisites: "openshift-cluster"
-    docs.ocp-virt.io/use-cases: "authorization,multi-tenancy,security"
-data:
-  readme: |
-    This directory will contain RBAC configurations including:
-    - ClusterRole and Role definitions
-    - ClusterRoleBinding and RoleBinding resources
-    - ServiceAccount configurations
-    - VM-specific access controls 
+This file is a placeholder to maintain directory structure.
