--- a/manifests/security/scc/.gitkeep.yaml
+++ b/manifests/security/scc/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the scc directory is committed to Git
-# Remove this file when adding actual SCC configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-scc
-  annotations:
-    docs.ocp-virt.io/category: "security"
-    docs.ocp-virt.io/complexity: "advanced"
-    docs.ocp-virt.io/environment: "openshift"
-    docs.ocp-virt.io/description: "Placeholder for Security Context Constraints configurations"
-    docs.ocp-virt.io/prerequisites: "openshift-cluster"
-    docs.ocp-virt.io/use-cases: "pod-security,privileged-access,vm-security"
-data:
-  readme: |
-    This directory will contain SCC configurations including:
-    - Custom SecurityContextConstraints for VMs
-    - Privileged access configurations
-    - VM-specific security policies
-    - Pod security standards 
+This file is a placeholder to maintain directory structure.
