--- a/automation/ansible/inventory/development/.gitkeep.yaml
+++ b/automation/ansible/inventory/development/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the development directory is committed to Git
-# Remove this file when adding actual Ansible inventory configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-development-inventory
-  annotations:
-    docs.ocp-virt.io/category: "automation"
-    docs.ocp-virt.io/complexity: "basic"
-    docs.ocp-virt.io/environment: "development"
-    docs.ocp-virt.io/description: "Placeholder for development environment Ansible inventory"
-    docs.ocp-virt.io/prerequisites: "ansible,development-cluster"
-    docs.ocp-virt.io/use-cases: "dev-automation,testing,development-deployment"
-data:
-  readme: |
-    This directory will contain development environment inventory including:
-    - hosts.yml - Development cluster hosts
-    - group_vars/ - Development-specific variables
-    - host_vars/ - Host-specific configurations
-    - Connection and authentication details 
+This file is a placeholder to maintain directory structure.
