--- a/automation/ansible/roles/storage-config/.gitkeep.yaml
+++ b/automation/ansible/roles/storage-config/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the storage-config directory is committed to Git
-# Remove this file when adding actual Ansible role configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-storage-config-role
-  annotations:
-    docs.ocp-virt.io/category: "automation"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for storage configuration Ansible role"
-    docs.ocp-virt.io/prerequisites: "ansible,storage-operators"
-    docs.ocp-virt.io/use-cases: "storage-automation,pv-config,storageclass-config"
-data:
-  readme: |
-    This directory will contain Ansible role for storage configuration including:
-    - tasks/ - Storage setup and configuration tasks
-    - vars/ - Storage-specific variables
-    - templates/ - StorageClass and PV templates
-    - files/ - Static configuration files 
+This file is a placeholder to maintain directory structure.
