--- a/manifests/templates/vm-templates/.gitkeep.yaml
+++ b/manifests/templates/vm-templates/.gitkeep.yaml
@@ -1,20 +1,1 @@
-# This file ensures the vm-templates directory is committed to Git
-# Remove this file when adding actual VM template configurations
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: placeholder-vm-templates
-  annotations:
-    docs.ocp-virt.io/category: "templates"
-    docs.ocp-virt.io/complexity: "intermediate"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Placeholder for VM template configurations"
-    docs.ocp-virt.io/prerequisites: "openshift-virtualization"
-    docs.ocp-virt.io/use-cases: "vm-templates,standardization,automation"
-data:
-  readme: |
-    This directory will contain VM template configurations including:
-    - Template definitions for common VM configurations
-    - Parameterized VM templates
-    - Golden image templates
-    - Operating system specific templates 
+This file is a placeholder to maintain directory structure.
