--- a/manifests/namespaces/udn-primary-namespace.yaml
+++ b/manifests/namespaces/udn-primary-namespace.yaml
@@ -1,13 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: udn-primary-namespace
-  annotations:
-    docs.ocp-virt.io/category: "platform"
-    docs.ocp-virt.io/complexity: "basic"
-    docs.ocp-virt.io/environment: "cloud,bare-metal,hybrid"
-    docs.ocp-virt.io/description: "Namespace for virtual machine workloads and related resources"
-    docs.ocp-virt.io/prerequisites: "openshift-cluster"
-    docs.ocp-virt.io/use-cases: "vm-workloads,multi-tenancy,isolation"
+  name: udn-primary-vm-guests
   labels:
     k8s.ovn.org/primary-user-defined-network: ""
