ADD optional paths to lvm cluster example

--- a/manifests/storage/lvm/lvmcluster.yaml
+++ b/manifests/storage/lvm/lvmcluster.yaml
@@ -11,6 +11,8 @@ spec:
       deviceSelector:
         paths:
         - /dev/sdb
+        optionalPaths:
+        - /dev/sdc
       thinPoolConfig:
         name: thin-pool-1
         sizePercent: 90
