--- a/manifests/network/linux-bridges/bridge-nad-dhcp-plugin.yaml
+++ b/manifests/network/linux-bridges/bridge-nad-dhcp-plugin.yaml
@@ -2,7 +2,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: br1
-  namespace: vm-test
+  namespace: vm-namespace
   annotations:
     k8s.v1.cni.cncf.io/resourceName: bridge.network.kubevirt.io/br1
 spec:
